ipc/ipdl/test/ipdl/error/trans_WrongDirection.ipdl
protocol trans_WrongDirection {

child:
    Msg();
    __delete__();

state S1:
    recv Msg goto S1;

start state _:
    send __delete__();
};
